# core-minepy

./: .gitignore  AGENTS.md  FINAL_COMPLETION_REPORT.md  GITHUB_SETUP.md  LICENSE  PROJECT_COMPLETION_REPORT.md  README.md  READY_FOR_GITHUB.md  RENAME_SUMMARY.md  REPOSITORY_RENAME_REPORT.md  pyproject.toml
examples/: digger_bot.py  echo_bot.py  guard_bot.py
src/minepy/: __init__.py  block.py  bot.py  entity.py  events.py  inventory.py  physics.py  plugin.py  scoreboard.py  types.py  vec3.py  world.py
src/minepy/plugins/: __init__.py  bed.py  chat.py  digging.py  inventory.py
src/minepy/protocol/: __init__.py  connection.py
src/pyflayer/: __init__.py  bot.py  events.py  plugin.py  types.py
src/pyflayer/plugins/: __init__.py  bed.py  chat.py  digging.py  inventory.py
src/pyflayer/protocol/: __init__.py  connection.py
tests/: conftest.py  test_bot.py  test_plugin.py
